UI Colors and look achieved

--- a/index.html
+++ b/index.html
@@ -1,45 +1,178 @@
-<!DOCTYPE html>
+<!doctype HTML>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>Swinsters Domain</title>
+    <head>
+        <link rel='stylesheet' href='css/index.css'/>
+        
+        <script type='text/javascript' src='js/colors.js'></script>
+    </head>
+    <body onload='fillColors();'>
+        <div class='contentSectionBackground'>
+            <div class='contentSection'>
+                <p id='titleText'>Swinny I/O</p>
+                <p id='subTitleText'>Because Google stole .dev, #thx</p>
+            </div>
+        </div>
+        <div class='contentSectionBackground'>
+            <div class='contentSection'>
+                <div class='sectionTitle'>
+                    <p class='sectionTitleText'>About Me</p>
+                </div>
+                <div class='sectionContent'>
+                    <p>
+                    Hello I'm Swinny, a developer who enjoys working on projects and expirmenting with new technologies. For real work I am currently employed by the United Services Automobile Association. However, I enjoy working on many projects outside of work as developing new and fun technologies is a passion of mine. This website is a sort of development diary for all of the projects I have worked on that I think are cool.
+                    </p>
+                    <br/>
+                    <p>
+                    You can view more details of a project by clicking on the project card. Some projects will have demos and some may just have pictures. Some may not even be totally complete. Like I explained before though this is just sort of a catalog of things I have done that I think are cool.
+                    </p>
+                    <br/>
+                    <p>
+                    Incase you would like to view it here is a link to my resume.
+                    </p>
+                    <a id='resumeButton' href='WilliamSwinnyResume.pdf'>Resume</a>
+                </div>
+            </div>
+        </div>
 
-		<!-- Bootstrap Core -->
-		<link href='bootstrap/css/bootstrap.min.css' rel='stylesheet'>
-		<script src='bootstrap/js/bootstrap.min.js'></script>
+        <div class='projects'>
 
-		<!-- jQuery -->
-		<script src='js/jquery.js'></script>
+            <div class='contentSectionBackground project'>
+                <div class='contentSection'>
+                    <p class='projectTitle'>Title</p>
+                    <p class='projectLanguage'>Lang</p>
+                    <p class='projectDescription'>This is a description of the project. This is another sentence about the stuff. Here is some more.</p>
+                </div>
+            </div>
 
-		<!-- Custom CSS -->
-		<link href='css/main.css?version=1.7' rel='stylesheet'>
-	</head>
-	<body>
-		<div id = 'page-title'>Swinny's Domain</div>
+            <div class='contentSectionBackground project'>
+                <div class='contentSection'>
+                    <p class='projectTitle'>Title</p>
+                    <p class='projectLanguage'>Lang</p>
+                    <p class='projectDescription'>This is a description of the project. This is another sentence about the stuff. Here is some more.</p>
+                </div>
+            </div>
 
-		<div class = 'section'>
-			<div class = 'section-title'>About Me</div>
-			<div class = 'section-content'>
-				<table class = 'code-block'>
-					<tr class = 'code-line'>
-						<td class = 'code-line-num'>1</td>
-						<td class = 'code-line-content'>I am a college student attending Texas A&M University at Corpus Christi who </td>
-					</tr>
-					<tr class = 'code-line'>
-						<td class = 'code-line-num'>10</td>
-						<td class = 'code-line-content'>for (int i = 0; i < 10; ++i) continue;</td>
-					</tr>
-					<tr class = 'code-line'>
-						<td class = 'code-line-num'>100</td>
-						<td class = 'code-line-content'>for (int i = 0; i < 10; ++i) continue;</td>
-					</tr>
-					<tr class = 'code-line'>
-						<td class = 'code-line-num'>999</td>
-						<td class = 'code-line-content'>for (int i = 0; i < 10; ++i) continue;</td>
-					</tr>
-				</table>
-			</div>
-		</div>
+            <div class='contentSectionBackground project'>
+                <div class='contentSection'>
+                    <p class='projectTitle'>Title</p>
+                    <p class='projectLanguage'>Lang</p>
+                    <p class='projectDescription'>This is a description of the project. This is another sentence about the stuff. Here is some more.</p>
+                </div>
+            </div>
 
-	</body>
+            <div class='contentSectionBackground project'>
+                <div class='contentSection'>
+                    <p class='projectTitle'>Title</p>
+                    <p class='projectLanguage'>Lang</p>
+                    <p class='projectDescription'>This is a description of the project. This is another sentence about the stuff. Here is some more.</p>
+                </div>
+            </div>
+
+            <div class='contentSectionBackground project'>
+                <div class='contentSection'>
+                    <p class='projectTitle'>Title</p>
+                    <p class='projectLanguage'>Lang</p>
+                    <p class='projectDescription'>This is a description of the project. This is another sentence about the stuff. Here is some more.</p>
+                </div>
+            </div>
+
+            <div class='contentSectionBackground project'>
+                <div class='contentSection'>
+                    <p class='projectTitle'>Title</p>
+                    <p class='projectLanguage'>Lang</p>
+                    <p class='projectDescription'>This is a description of the project. This is another sentence about the stuff. Here is some more.</p>
+                </div>
+            </div>
+
+            <div class='contentSectionBackground project'>
+                <div class='contentSection'>
+                    <p class='projectTitle'>Title</p>
+                    <p class='projectLanguage'>Lang</p>
+                    <p class='projectDescription'>This is a description of the project. This is another sentence about the stuff. Here is some more.</p>
+                </div>
+            </div>
+
+            <div class='contentSectionBackground project'>
+                <div class='contentSection'>
+                    <p class='projectTitle'>Title</p>
+                    <p class='projectLanguage'>Lang</p>
+                    <p class='projectDescription'>This is a description of the project. This is another sentence about the stuff. Here is some more.</p>
+                </div>
+            </div>
+
+            <div class='contentSectionBackground project'>
+                <div class='contentSection'>
+                    <p class='projectTitle'>Title</p>
+                    <p class='projectLanguage'>Lang</p>
+                    <p class='projectDescription'>This is a description of the project. This is another sentence about the stuff. Here is some more.</p>
+                </div>
+            </div>
+
+            <div class='contentSectionBackground project'>
+                <div class='contentSection'>
+                    <p class='projectTitle'>Title</p>
+                    <p class='projectLanguage'>Lang</p>
+                    <p class='projectDescription'>This is a description of the project. This is another sentence about the stuff. Here is some more.</p>
+                </div>
+            </div>
+
+            <div class='contentSectionBackground project'>
+                <div class='contentSection'>
+                    <p class='projectTitle'>Title</p>
+                    <p class='projectLanguage'>Lang</p>
+                    <p class='projectDescription'>This is a description of the project. This is another sentence about the stuff. Here is some more.</p>
+                </div>
+            </div>
+
+            <div class='contentSectionBackground project'>
+                <div class='contentSection'>
+                    <p class='projectTitle'>Title</p>
+                    <p class='projectLanguage'>Lang</p>
+                    <p class='projectDescription'>This is a description of the project. This is another sentence about the stuff. Here is some more.</p>
+                </div>
+            </div>
+
+            <div class='contentSectionBackground project'>
+                <div class='contentSection'>
+                    <p class='projectTitle'>Title</p>
+                    <p class='projectLanguage'>Lang</p>
+                    <p class='projectDescription'>This is a description of the project. This is another sentence about the stuff. Here is some more.</p>
+                </div>
+            </div>
+
+            <div class='contentSectionBackground project'>
+                <div class='contentSection'>
+                    <p class='projectTitle'>Title</p>
+                    <p class='projectLanguage'>Lang</p>
+                    <p class='projectDescription'>This is a description of the project. This is another sentence about the stuff. Here is some more.</p>
+                </div>
+            </div>
+
+            <div class='contentSectionBackground project'>
+                <div class='contentSection'>
+                    <p class='projectTitle'>Title</p>
+                    <p class='projectLanguage'>Lang</p>
+                    <p class='projectDescription'>This is a description of the project. This is another sentence about the stuff. Here is some more.</p>
+                </div>
+            </div>
+
+            <div class='contentSectionBackground project'>
+                <div class='contentSection'>
+                    <p class='projectTitle'>Title</p>
+                    <p class='projectLanguage'>Lang</p>
+                    <p class='projectDescription'>This is a description of the project. This is another sentence about the stuff. Here is some more.</p>
+                </div>
+            </div>
+
+            <div class='contentSectionBackground project'>
+                <div class='contentSection'>
+                    <p class='projectTitle'>Title</p>
+                    <p class='projectLanguage'>Lang</p>
+                    <p class='projectDescription'>This is a description of the project. This is another sentence about the stuff. Here is some more.</p>
+                </div>
+            </div>
+
+        </div>
+
+    </body>
 </html>
