--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
     <head>
         <link rel='stylesheet' href='css/index.css'/>
-        
         <script type='text/javascript' src='js/colors.js'></script>
     </head>
     <body onload='fillColors();'>
@@ -10,6 +9,8 @@
             <div class='contentSection'>
                 <p id='titleText'>Swinny I/O</p>
                 <p id='subTitleText'>Because Google stole .dev, #thx</p>
+                <p id='subTitleText'>Where we focus, and bang them out one at a time!</p>
+                <p id='subTitleText'>Do you know Linux, can you 'touch me'?</p>
             </div>
         </div>
         <div class='contentSectionBackground'>
