Finished Education and Experience. Added and started Skills and Languages

--- a/index.html
+++ b/index.html
@@ -75,12 +75,88 @@
 					<div class='experienceLeft'>
 						<p class='experienceJobTitle'>Software Engineer III</p>
 						<p class='experienceLocation'>San Antonio, TX</p>
-						<p class='experienceTimeframe'>2016 - Present</p>
+						<p class='experienceTimeframe'>Aug 2016 - Present</p>
 					</div>
 					<div class='experienceRight'>
 						<p class='experienceCompany'>United Services Automobile Association</p>
 						<div class='experienceDescription'>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							<li>Design and develop systems using context dependency injection in a domain driven envorinment</li>
+							<li>Design and develop REST APIs and microservices</li>
+							<li>Develop Android apps</li>
+						</div>
+					</div>
+				</div>
+
+				<div class='experienceRow'>
+					<div class='experienceLeft'>
+						<p class='experienceJobTitle'>Software Engineer Intern</p>
+						<p class='experienceLocation'>Corpus Christi, TX</p>
+						<p class='experienceTimeframe'>Jun 2014 - May 2016</p>
+					</div>
+					<div class='experienceRight'>
+						<p class='experienceCompany'>Lone Star Unmanned Aerial Systems Center of Excellence</p>
+						<div class='experienceDescription'>
+							<ul>
+								<li>Developed and integrated software infrastructure for safe UAS mission operations in Mission Control Center (MCC) and test ranges</li>
+								<li>Developing situational awareness software</li>
+								<li>Prototype High-Level-Architecture (HLA) integration to facilitate a Live-Virtual-Constructive (LVC) style architecture</li>
+								<li>Integrated Networking solutions</li>
+								<li>Software tool development</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+
+				<div class='experienceRow'>
+					<div class='experienceLeft'>
+						<p class='experienceJobTitle'>Undergraduate Researcher</p>
+						<p class='experienceLocation'>Corpus Christi, TX</p>
+						<p class='experienceTimeframe'>Sep 2013 - May 2016</p>
+					</div>
+					<div class='experienceRight'>
+						<p class='experienceCompany'>The Innovation in Computing Research Labs (iCORE)</p>
+						<div class='experienceDescription'>
+							<ul>
+								<li>Mobile app development</li>
+								<li>Developing Unmanned Aerial Systems software solutions</li>
+								<li>Working with human interface technology (Emotive, Myo, Google Glass, etc.)</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+
+				<div class='experienceRow'>
+					<div class='experienceLeft'>
+						<p class='experienceJobTitle'>Supplemental Instructor</p>
+						<p class='experienceLocation'>Corpus Christi, TX</p>
+						<p class='experienceTimeframe'>Jan 2013 - Jun 2014</p>
+					</div>
+					<div class='experienceRight'>
+						<p class='experienceCompany'>Texas A&M University Corpus Christi</p>
+						<div class='experienceDescription'>
+							<ul>
+								<li>Assisted students with work and labs</li>
+								<li>Outside of class tutoring for help on labs and preparation for exams</li>
+								<li>Attended lecture to assist the professor with any activities</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+
+				<div class='experienceRow'>
+					<div class='experienceLeft'>
+						<p class='experienceJobTitle'>Software Engineer Intern</p>
+						<p class='experienceLocation'>San Antonio, TX</p>
+						<p class='experienceTimeframe'>May 2013 - Aug 2013</p>
+					</div>
+					<div class='experienceRight'>
+						<p class='experienceCompany'>Intellica Corperation</p>
+						<div class='experienceDescription'>
+							<ul>
+								<li>Managed Databases</li>
+								<li>Developed and secured webpages</li>
+								<li>Penetration testing</li>
+							</ul>
 						</div>
 					</div>
 				</div>
@@ -97,12 +173,45 @@
 				Education
 			</div>
 			<div id='educationBody' class='cardBody'>
+
 				<div class='educationItem'>
 					<p class='educationDegreeTitle'>B.S. Computer Science</p>
 					<p class='educationSchool'>Texas A&M University Corpus Christi</p>
 					<p class='educationGPA'>GPA: 3.93</p>
 					<p class='educationYears'>2012 - 2016</p>
 				</div>
+
+			</div>
+		</div>
+
+		<!-- ********************************************** -->
+		<!-- Skills Card                                 -->
+		<!-- ********************************************** -->
+
+		<div class='contentCard'>
+			<div class='cardTitle'>
+				Skills and Languages
+			</div>
+			<div id='skillsBody' class='cardBody'>
+
+				<div class='skillItem'>Java SE</div>
+				<div class='skillItem'>Java EE</div>
+				<div class='skillItem'>Android</div>
+				<div class='skillItem'>Context Dependency Injection</div>
+				<div class='skillItem'>C++</div>
+				<div class='skillItem'>C</div>
+				<div class='skillItem'>C#</div>
+				<div class='skillItem'>Python</div>
+				<div class='skillItem'>MySQL</div>
+				<div class='skillItem'>HTML</div>
+				<div class='skillItem'>CSS</div>
+				<div class='skillItem'>PHP</div>
+				<div class='skillItem'>Java Script</div>
+				<div class='skillItem'>Database Design</div>
+				<div class='skillItem'>Database Administration</div>
+				<div class='skillItem'>Domain Driven Development</div>
+				<div class='skillItem'>Test Driven Development</div>
+				
 			</div>
 		</div>
 		
